added: modification in user controller, add swagger code to add update and delete profile
